# tafelmusik

./: .gitignore  CLAUDE.md  comment.py  instructions.md  playground.py  pyproject.toml  read-comments.py  tmux-comment.sh
.bon/: items.jsonl  understanding.md
.bon/contributions/: 2026-03-29T011700.md  2026-03-29T020200.md  2026-03-29T023000.md  2026-03-29T092500.md  2026-03-29T102300.md  2026-03-29T203000.md  2026-03-30T070200.md  2026-03-30T083000.md  2026-03-30T084500.md  2026-03-30T163000.md  2026-03-30T202000.md  2026-03-30T211800.md  2026-03-30T233100.md  2026-03-31T123800.md  2026-03-31T134400.md  2026-04-01T210900.md  2026-04-01T212800.md  2026-04-02T094800.md  2026-04-03T063100.md
.bon/handoffs/: 03e74d3d.md  07307eb5.md  0e4ba27a.md  155062dd.md  1a6d7094.md  1c01be52.md  2026-04-05-08ce6d5c.md  2026-04-05-5d3f14aa.md  2026-04-05-a47ba325.md  2026-04-05-c08a7941.md  2026-04-05-c707d058.md  2026-04-06-20b324d0.md  25927915.md  29fc7c21.md  30638745.md  30ef99d4.md  329d344e.md  346cafb0.md  3629252f.md  3980e153.md  4dbe2285.md  51fd2d43.md  55ba0972.md  560b078d.md  5e8d1913.md  5f3663fd.md  61679b86.md  6175bb7e.md  61d1434d.md  62ffa239.md  6f7349ae.md  71741b5a.md  7428a597.md  748b3e48.md  813b971b.md  85b3db2c.md  8a78c485.md  908bbe92.md  91badb95.md  9a4e4d16.md  (+17 more)
.claude-plugin/: plugin.json
deploy/: post-commit.sh  post-merge.sh  post-receive.sh  restart-if-changed.sh  test-deploy.sh  test-filtering.sh
docs/: architecture-v2.md  calute-phase2-brief.md  calute-playground.md  design.md  editing-grammar.md  logging.md  notification-architecture.md  plan.md  requirements.md
docs/archive/: 2026-03-28-001-feat-tafelmusik-collaborative-editor-plan.md
hooks/: ensure-tafelmusik.sh
public/: cm-entry.js  editor.js  index.html  package-lock.json  package.json
references/prototypes/: blocknote-upload-pattern.js  cm-entry2.js  (+4 more)
service/: tafelmusik-tube.service  tafelmusik.service
(+24 files in other folders)
